src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/infinite/direct-infinite-recursion.tessla
def x: Events[Int] := x